--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Vite + Vue</title>
   </head>
   <body>
-    <div id="app"></div>
+    <input type="text" id="hiddenInputSeen" value="false">
+    <input type="text" id="card1GetValue" value="1">
+    <input type="text" id="card2GetValue" value="2">
+    <input type="text" id="card3GetValue" value="3">
+    <div id="app" ></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
